// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should show cross icon when input value exists 1`] = `
<Search
  placeholder=""
  value=""
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="jc-input"
      type="text"
      value=""
    >
      <input
        className="jc-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </Input>
    <span
      className="undefined-action"
    >
      <Icon
        className=""
        prefixCls="jcicon"
        spin={false}
        style={Object {}}
        type="search"
      >
        <i
          className="jcicon jcicon-search "
          style={Object {}}
        />
      </Icon>
    </span>
  </div>
</Search>
`;

exports[`Search should show cross icon when input value exists 2`] = `
<Search
  placeholder=""
  value="a"
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="jc-input"
      type="text"
      value="a"
    >
      <input
        className="jc-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="a"
      />
    </Input>
    <a
      className="undefined-action"
      href="#"
      onClick={[Function]}
    >
      <Icon
        className=""
        prefixCls="jcicon"
        spin={false}
        style={Object {}}
        type="cross-circle"
      >
        <i
          className="jcicon jcicon-cross-circle "
          style={Object {}}
        />
      </Icon>
    </a>
  </div>
</Search>
`;
